--- a/index.html
+++ b/index.html
@@ -28,29 +28,80 @@
             </div>
         </div>
     </header>-->
-<main>
-    <section class="top">
-        <div class="head-box">
-            <div class="main-header">
-                <div class="for-mobile">
-                    <span><span class="dark">Doctor</span><b class="painted">Care</b></span>
-                    <div class="case">
-                        <label for="#case">&hamurger;</label>
-                        <button id="case"></button>
-                    </div>
+
+  
+<header>
+    <div class="head">
+        <div class="main-header">
+            <div class="for-mobile">
+                <span><span class="dark">Doctor</span><b class="painted">Care</b></span>
+                <div class="case">
+                    <label for="#case">&hamurger;</label>
+                    <button id="case"></button>
                 </div>
+            </div>
+            <div>
+                <ul>
+                    <li>Início</li>
+                    <li>Sobre</li>
+                    <li>Serviços</li>
+                    <li>Depoimentos</li>
+                </ul>
+            </div>
+            <div>
+                <button>Agendar consulta</button>
+            </div>
+        </div>
+    </div>
+</header>
+ 
+
+   
+    <div class="main-header">
+        <div class="for-mobile">
+            <span><span class="dark">Doctor</span><b class="painted">Care</b></span>
+            <div class="case">
+                <label for="#case">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </label>
+                <input id="case" type="checkbox"></input>
+            </div>    
+            <div class="container">
                 <div>
+                    <span><span class="dark">Doctor</span><b class="painted">Care</b></span>
+                    <span>&cross;</span>
+                </div>
+                <!-- <div>
                     <ul>
                         <li>Início</li>
                         <li>Sobre</li>
                         <li>Serviços</li>
                         <li>Depoimentos</li>
                     </ul>
-                </div>
+                    <button>Agende sua consulta</button>
+                </div> -->
                 <div>
-                    <button>Agendar consulta</button>
+
                 </div>
             </div>
+        </div>
+        <div> 
+            <ul>
+                <li>Início</li>
+                <li>Sobre</li>
+                <li>Serviços</li>
+                <li>Depoimentos</li>
+            </ul>
+        </div>
+        <div>
+            <button>Agendar consulta</button>
+        </div>
+    </div>
+<main>
+    <section class="top">
+        <div class="head-box">
             <div class="assistance">
                 <div class="assistance_left">
                     <h5>BOAS-VINDAS A DOCTORCARE 👋</h5>
