--- a/index.html
+++ b/index.html
@@ -9,85 +9,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 </head>
-<body>
-    <!-- <header> 
-        <div class="header-box">
-            <div>
-                <span>Doctor<b>Care</b></span>
-            </div>
-            <div>
-                <ul>
-                    <li>Início</li>
-                    <li>Sobre</li>
-                    <li>Serviços</li>
-                    <li>Depoimentos</li>
-                </ul>
-            </div>
-            <div>
-                <button>Agendar consulta</button>
-            </div>
-        </div>
-    </header>-->
-
-  
+<body>  
 <header>
-    <div class="head">
-        <div class="main-header">
-            <div class="for-mobile">
-                <span><span class="dark">Doctor</span><b class="painted">Care</b></span>
-                <div class="case">
-                    <label for="#case">&hamurger;</label>
-                    <button id="case"></button>
-                </div>
-            </div>
-            <div>
-                <ul>
-                    <li>Início</li>
-                    <li>Sobre</li>
-                    <li>Serviços</li>
-                    <li>Depoimentos</li>
-                </ul>
-            </div>
-            <div>
-                <button>Agendar consulta</button>
-            </div>
+    <div>
+        <div>
+            <span>
+                Doctor<span class="bolded">Care</span>
+            </span>
         </div>
-    </div>
-</header>
- 
-
-   
-    <div class="main-header">
-        <div class="for-mobile">
-            <span><span class="dark">Doctor</span><b class="painted">Care</b></span>
-            <div class="case">
-                <label for="#case">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </label>
-                <input id="case" type="checkbox"></input>
-            </div>    
-            <div class="container">
-                <div>
-                    <span><span class="dark">Doctor</span><b class="painted">Care</b></span>
-                    <span>&cross;</span>
-                </div>
-                <!-- <div>
-                    <ul>
-                        <li>Início</li>
-                        <li>Sobre</li>
-                        <li>Serviços</li>
-                        <li>Depoimentos</li>
-                    </ul>
-                    <button>Agende sua consulta</button>
-                </div> -->
-                <div>
-
-                </div>
-            </div>
-        </div>
-        <div> 
+        <div>
             <ul>
                 <li>Início</li>
                 <li>Sobre</li>
@@ -99,6 +29,7 @@
             <button>Agendar consulta</button>
         </div>
     </div>
+</header>
 <main>
     <section class="top">
         <div class="head-box">
